Fix Gauges to display correctly (used to be too large, forcing wrap).

--- a/css/main.css
+++ b/css/main.css
@@ -99,4 +99,6 @@
 
 #temp-bot-left-1, #temp-bot-left-2 {
     display: inline-block;
+    padding: 0;
+    margin: 0;
 }
